--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       Choose Datetime
     </button>
     <lit-datetime-picker
+      startofweek="1"
       oninput="document.getElementsByTagName('button')[0].innerText = arguments[0].detail.toISOString();
       document.getElementsByTagName('lit-datetime-picker')[0].setAttribute('value', arguments[0].detail.toISOString())"
     ></lit-datetime-picker>
